# ldap-py-sample

./: .gitignore  MANIFEST.in  README.EN.md  README.FR.md  README.md  ldap_connection.py  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: client.md
docs/assets/styles/: extra.css
examples/: custom_config.py  example_alice_flow.py  example_roles_flow.py
georchestra_ldap/: __init__.py  client.py  config.py
georchestra_ldap_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ldap_actions/: add_user_role.py  create_org.py  create_role.py  get_role_infos.py  get_user_infos.py  update_org_user.py  update_user_name.py
