[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georchestra-ldap-py"
version = "0.1.1"
description = "Thin Python wrapper around geOrchestra LDAP helper scripts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ldap3",
]
authors = [
    { name = "geOrchestra community" },
]
license = { text = "MIT" }

[tool.setuptools]
py-modules = ["config"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests", "tests.*", "docs", "docs.*"]
