[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georchestra-ldap-py"
version = "0.1.3"
description = "Thin Python wrapper around geOrchestra LDAP helper scripts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ldap3",
]
authors = [
    { name = "geOrchestra community" },
]
license = { text = "MIT" }

[tool.setuptools]
packages = ["ldap_actions", "georchestra_ldap"]
py-modules = ["config", "ldap_connection"]
include-package-data = true
